--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
       "backgroundColor": "#F5F5F5",
       "backgroundTextStyle": "light",
       "navigationBarBackgroundColor": "#4CAF50",
-      "navigationBarTitleText": "轻断食助手",
+      "navigationBarTitleText": "断食计划Pro",
       "navigationBarTextStyle": "white"
     },
     "tabBar": {
@@ -35,5 +35,9 @@
         }
       ]
     },
-    "sitemapLocation": "sitemap.json"
+    "sitemapLocation": "sitemap.json",
+    "networkTimeout": {
+        "request": 10000,
+        "downloadFile": 10000
+      }
   }
